fixed grid by adding overflow: 0, added read status

--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-:root {
-  --rows: 1
-}
-
 html, body {
   height: 100%;
   margin: 0;
@@ -24,7 +20,7 @@ html, body {
 #header {
   background: lightgray;
   display: flex;
-  height: 10%;;
+  height: 10vh;
   justify-content: space-between;
   align-items: center;;
 }
@@ -46,13 +42,12 @@ h1 {
 }
 
 #add {
-  min-width: 45%;
-  min-height: 100%;
-  font-size: 200%;
+  min-width: 40%;
+  font-size: calc(1vh + 1.5vw);
   margin: 0;
 }
 
-#overlay {
+.overlay {
   z-index: 1;
   opacity: 30%;
   min-width: 100%;
@@ -61,19 +56,14 @@ h1 {
   background: black;
 }
 
-#cards-wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex: 1;
-  min-width: 75%;
-}
 
 #new-card-modal {
   z-index: 2;
-  position: fixed;
   min-width: 20vw;
   min-height: 50vh;
+  max-width: 20vw;
+  max-height: 50vh;
+  position: absolute;
 }
 
 #modal-header {
@@ -121,15 +111,22 @@ h1 {
   font-size: 18px;
 }
 
+#cards-wrapper {
+  display: flex;
+  justify-content: center;
+  flex: 1;
+  min-width: 75%;
+  max-width: 100%;
+}
 
 #cards-grid {
-  display: flex;
-  gap: 8%;
-  justify-content: center;
-  grid-template-rows: repeat(var(--rows), 1fr);
-  grid-template-columns: repeat(3, 1fr);
+  margin: 20px 0;
+  display: grid;
+  gap: 4vh;
+  justify-items: center;
+  align-items: center;
+  grid-template-columns: repeat(2, 1fr);
   min-width: 80%;
-  max-height: 80%;
   max-width: 80%;
 }
 
@@ -138,14 +135,19 @@ h1 {
   flex-direction: column;
   border: 3px solid black;
   border-radius: 10px;
-  min-width: 20vw;
+  min-width: 22vw;
   min-height: 35vh;
-  max-width: 20vw;;
-  max-height: 60vh;
+  max-width: 20vw;
+  max-height: 35vh;
 }
 
 .card p {
   margin: 0;
+}
+
+.card-header {
+  overflow: auto;
+  border-bottom: 2px solid black;
 }
 
 .card-title {
@@ -153,12 +155,11 @@ h1 {
   font-weight: bold;
   background: none;
   overflow-wrap: anywhere;
-  font-size: calc(2vh + 1.5vw);
+  font-size: 200%;
   justify-content: center;
   align-items: center;
   text-align: center;
-  max-height: 100px;
-  overflow-y: auto;
+  max-height: 120px;
 }
 
 .card-author {
@@ -171,9 +172,7 @@ h1 {
   overflow-wrap: anywhere;
   justify-content: center;
   align-items: center;
-  border-bottom: 2px solid black;
-  max-height: 100px;
-  overflow-y: auto;
+  max-height: 120px;
 }
 
 .card-content {
@@ -232,6 +231,7 @@ h1 {
   background: rgb(189, 189, 189);
   flex: 1;
   flex-direction: column;
+  min-height: 100%;
 }
 
 #main-sidebar {
@@ -242,6 +242,20 @@ h1 {
   display: flex;
   min-height: 33%;
   justify-content: center;
+}
+
+#hidden-sidebar {
+  align-items: center;
+  justify-content: center;
+  max-width: 2%;
+  min-height: 100%;
+  font-size: calc(3vh + 0.9vw);
+  cursor: pointer;
+}
+
+#right-sidebar {
+  max-width: 2%;
+  background: lightgray;
 }
 
 #plug,
@@ -274,15 +288,15 @@ h1 {
 }
 
 
-#hidden-sidebar {
-  align-items: center;
-  justify-content: center;
-  max-width: 2%;
-  min-height: 100%;
-  font-size: calc(3vh + 0.9vw);
-  cursor: pointer;
-}
-
 .hidden {
   display: none;
 };
+
+.overlay .hidden {
+  display: none;
+}
+
+.read {
+  background: rgb(185, 185, 185);
+  border:2.5px solid rgb(41, 41, 41);
+}
